--- a/.env
+++ b/.env
@@ -2,5 +2,12 @@ JWT_SECRET=mysecretkey_super_secret_change_in_production
 MASTER_ENCRYPTION_KEY=master_aes_key_for_payment_encryption_change_in_production
 PORT=3000
 NODE_ENV=development
+
+# Admin Configuration
+ADMIN_ID=2
+ADMIN_USERNAME=admin
+ADMIN_EMAIL=admin@example.com
+ADMIN_PASSWORD=admin123
+
 # SQLite database will be created automatically as a file
 # No need for external database server!
